tests/urmoac/input/wkt/errors/polygons_broken_id/errors.urmoac
Could not parse object id 'd' to long.
Objects could not be loaded.
Quitting on error...
